feat: update deploy

--- a/appspec.yaml
+++ b/appspec.yaml
@@ -3,7 +3,7 @@ Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: <TASK_DEFINITION>
+        TaskDefinition: "arn:aws:ecs:ap-northeast-2:153441531755:task-definition/_TASK_DEFINITION_REVISION_"
         LoadBalancerInfo:
           ContainerName: "channel-connector-proxy"
           ContainerPort: 8080
